--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.16",
     "@types/react-input-mask": "^3.0.2",
     "axios": "^1.3.2",
+    "date-fns": "^2.30.0",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
     "framer-motion": "^6",
